# code-challenge-generator

backend/: .gitignore  app.db  pyproject.toml  server.py
backend/src/: .env  ai_generator.py  apps.py
backend/src/database/: base.py  db.py  models.py
backend/src/routes/: challenge.py  webhooks.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: Historypanel.jsx
frontend/src/layout/: Layout.jsx
