[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-backend-api>= 4.2.0",
    "fastapi>=0.116.1",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.43",
    "svix>=1.75.0",
    "uvicorn>=0.35.0",
]
